--- a/index.html
+++ b/index.html
@@ -9,37 +9,40 @@
   <body>
 
     <div class="container">
-        <form action="" class="form">
+        <form action="" id="form">
             <h1>Form Page</h1>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="username">
-                <div class="error"></div>
+                <input type="text" id="Username" name="username" placeholder="username">
+                <div id="nameError"></div>
             </div>
 
             <div class="form-group">
                 <label for="Email">Email</label>
                 <input type="text" id="Email" name="Email" placeholder="Email">
-                <div class="error"></div>
+                <div id="emailError"></div>
             </div>
 
             <div class="form-group">
                 <label for="Mobile Number">Mobile Number</label>
                 <input type="text" id="Mobile Number" name="Mobile Number" placeholder="Mobile Number">
-                <div class="error"></div>
+                <div id="numberError"></div>
             </div>
 
             <div class="form-group">
                 <label for="Date of birth">Date of birth</label>
-                <input type="date" >
+                <input type="date" id="date">
+                <div id="dateError"></div>
                 
             </div>
             <div class="form-group">
-                <label for="username">Gender :</label>
-                <div class="pointer-radio">
-                <input type="radio"  name="gender" value="Male"> Male 
-                <input type="radio"  name="gender" value="Female"> Female
-                <input type="radio"  name="gender" value="Others"> Others
+                <label for="username">Gender :
+                <div class="pointer-radio" >
+                <input type="radio"  name="gender" value="Male" id="gender"> Male 
+                <input type="radio"  name="gender" value="Female" id="gender"> Female
+                <input type="radio"  name="gender" value="Others" id="gender"> Others
+                </lable>
+                <div id="genderError"></div>
             </div>
 
                 
