--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="" id="form">
             <h1>Form Page</h1>
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="fUsername">Username</label>
                 <input type="text" id="Username" name="username" placeholder="username">
                 <div id="nameError"></div>
             </div>
@@ -47,7 +47,7 @@
 
                 
             </div>
-            <button type="submit">Submit</button>          
+            <button class="submit" onclick="mySubmit(event)">Submit</button>          
         </form>
     </div>
 
