--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+  <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
         <form action="" id="form">
             <h1>Form Page</h1>
             <div class="form-group">
-                <label for="fUsername">Username</label>
+                <label for="Username">Username</label>
                 <input type="text" id="Username" name="username" placeholder="username">
                 <div id="nameError"></div>
             </div>
@@ -24,8 +24,8 @@
             </div>
 
             <div class="form-group">
-                <label for="Mobile Number">Mobile Number</label>
-                <input type="text" id="Mobile Number" name="Mobile Number" placeholder="Mobile Number">
+                <label for="mobileNumber">Mobile Number</label>
+                <input type="text" id="mobileNumber" name="mobileNumber" placeholder="Mobile Number">
                 <div id="numberError"></div>
             </div>
 
@@ -33,24 +33,21 @@
                 <label for="Date of birth">Date of birth</label>
                 <input type="date" id="date">
                 <div id="dateError"></div>
-                
             </div>
+
             <div class="form-group">
-                <label for="username">Gender :
-                <div class="pointer-radio" >
-                <input type="radio"  name="gender" value="Male" id="gender"> Male 
-                <input type="radio"  name="gender" value="Female" id="gender"> Female
-                <input type="radio"  name="gender" value="Others" id="gender"> Others
-                </lable>
+                <label for="Gender">Gender:</label>
+                <div class="pointer-radio">
+                    <input type="radio" name="gender" value="Male" id="genderMale"> Male 
+                    <input type="radio" name="gender" value="Female" id="genderFemale"> Female
+                    <input type="radio" name="gender" value="Others" id="genderOthers"> Others
+                </div>
                 <div id="genderError"></div>
             </div>
 
-                
-            </div>
             <button class="submit" onclick="mySubmit(event)">Submit</button>          
         </form>
     </div>
-
-    </html>
     <script src="index.js" defer></script>
   </body>
+</html>
