--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title> Form Page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
 
@@ -29,7 +31,7 @@
                 <div id="numberError"></div>
             </div>
 
-            <div class="form-group">
+             <div class="form-group">
                 <label for="Date of birth">Date of birth</label>
                 <input type="date" id="date">
                 <div id="dateError"></div>
@@ -37,7 +39,7 @@
 
             <div class="form-group">
                 <label for="Gender">Gender:</label>
-                <div class="pointer-radio">
+                <div class="pointerradio">
                     <input type="radio" name="gender" value="Male" id="genderMale"> Male 
                     <input type="radio" name="gender" value="Female" id="genderFemale"> Female
                     <input type="radio" name="gender" value="Others" id="genderOthers"> Others
@@ -48,6 +50,27 @@
             <button class="submit" onclick="mySubmit(event)">Submit</button>          
         </form>
     </div>
+
+    <h1 class="table-title mt-5 pt-5">Form Page</h1>
+<div  id="print-table" >
+    <table class="table table-bordered bo">
+        <thead >
+            <tr>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Mobile Number</th>
+                <th>DOB</th>
+                <th>Gender</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody id="table-body">
+          
+        </tbody>
+    </table>
+</div>
+
+
     <script src="index.js" defer></script>
   </body>
 </html>
