--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <h1 class="table-title mt-5 pt-5">Form Page</h1>
 <div  id="print-table" >
-    <table class="table table-bordered bo">
+    <table class="table table-bordered " style="text-align: center;">
         <thead >
             <tr>
                 <th>Username</th>
